--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
 * text=auto !eol
 /apertium-tur-uzb.tur-uzb.dix -text
+/apertium-tur-uzb.tur-uzb.rlx -text
+/apertium-tur-uzb.tur.lexc -text
+/apertium-tur-uzb.tur.twol -text
+/apertium-tur-uzb.uzb.lexc -text
+/apertium-tur-uzb.uzb.twol -text
+/update-morphs.bash -text
