--- a/configure.ac
+++ b/configure.ac
@@ -68,14 +68,14 @@ then
   AC_MSG_ERROR([You don't have cg-proc installed.])
 fi
 
-AC_PATH_PROG(LRXCOMP, apertium-lrx-comp, no)
+AC_PATH_PROG(LRXCOMP, lrx-comp, no)
 if test x$ac_cv_path_LRXCOMP = x
 then
-  AC_MSG_ERROR([You don't have apertium-lrx-comp installed.])
+  AC_MSG_ERROR([You don't have lrx-comp installed.])
 fi
 if test x$ac_cv_path_LRXCOMP = xno
 then
-  AC_MSG_ERROR([You don't have apertium-lrx-comp installed.])
+  AC_MSG_ERROR([You don't have lrx-comp installed.])
 fi
 
 AC_PATH_PROG(LRXPROC, lrx-proc, no)
