--- a/Makefile.am
+++ b/Makefile.am
@@ -129,10 +129,10 @@ $(PREFIX2).rlx.bin: $(BASENAME).$(PREFIX2).rlx
 ###############################################################################
 
 $(PREFIX1).autolex.bin: $(BASENAME).$(PREFIX1).lrx
-	apertium-lrx-comp lr $< $@
+	lrx-comp lr $< $@
 
 $(PREFIX2).autolex.bin: $(BASENAME).$(PREFIX2).lrx
-	apertium-lrx-comp lr $< $@
+	lrx-comp lr $< $@
 
 ###############################################################################
 ## Structural transfer rules
