--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,7 @@
 /apertium-tur-uzb.uzb.lexc -text
 /apertium-tur-uzb.uzb.twol -text
 /autogen.sh -text
+/challenge.txt -text
 /configure.ac -text
 /modes.xml -text
 /tur-uzb.prob -text svneol=unset#unset
