--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,7 @@
 /challenge.txt -text
 /configure.ac -text
 /modes.xml -text
+/postedıt -text
 texts/ataturk-tr.txt -text
 texts/ataturk.txt -text
 texts/test1 -text
