fix some copula readings

--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@
 /apertium-tur-uzb.uzb-tur.lrx -text
 /apertium-tur-uzb.uzb-tur.rlx -text
 /apertium-tur-uzb.uzb-tur.t1x -text
+/apertium-tur-uzb.uzb-tur.t2x -text
 /apertium-tur-uzb.uzb.lexc -text
 /apertium-tur-uzb.uzb.twol -text
 /autogen.sh -text
