--- a/Makefile.am
+++ b/Makefile.am
@@ -11,8 +11,8 @@ PREFIX2=$(LANG2)-$(LANG1)
 BASENAME=apertium-$(PREFIX1)
 
 TARGETS_COMMON = $(PREFIX1).autobil.bin $(PREFIX2).autobil.bin \
-	$(PREFIX1).automorf.hfst $(PREFIX1).autogen.hfst $(PREFIX1).t1x.bin  \
-	$(PREFIX2).automorf.hfst $(PREFIX2).autogen.hfst $(PREFIX2).t1x.bin  \
+	$(PREFIX1).automorf.hfst $(PREFIX1).autogen.hfst $(PREFIX1).t1x.bin   \
+	$(PREFIX2).automorf.hfst $(PREFIX2).autogen.hfst $(PREFIX2).t1x.bin $(PREFIX2).t2x.bin \
         $(PREFIX1).rlx.bin $(PREFIX2).rlx.bin \
         $(PREFIX1).autolex.bin $(PREFIX2).autolex.bin \
 	$(PREFIX1).mode $(PREFIX2).mode modes 
@@ -146,6 +146,11 @@ $(PREFIX2).t1x.bin: $(BASENAME).$(PREFIX2).t1x
 	apertium-validate-transfer $(BASENAME).$(PREFIX2).t1x
 	apertium-preprocess-transfer $(BASENAME).$(PREFIX2).t1x $@
 
+$(PREFIX2).t2x.bin: $(BASENAME).$(PREFIX2).t2x
+	apertium-validate-transfer $(BASENAME).$(PREFIX2).t2x
+	apertium-preprocess-transfer $(BASENAME).$(PREFIX2).t2x $@
+
+
 ###############################################################################
 ## Postgeneration dictionaries
 ###############################################################################
@@ -191,6 +196,7 @@ apertium_tur_uzb_DATA=$(PREFIX1).autobil.bin $(PREFIX2).autobil.bin \
 		    $(PREFIX1).autogen.hfst $(PREFIX2).autogen.hfst \
 		    $(PREFIX1).automorf.hfst $(PREFIX2).automorf.hfst \
 		    $(PREFIX1).t1x.bin $(PREFIX2).t1x.bin \
+		    $(PREFIX2).t2x.bin \
 		    $(PREFIX1).rlx.bin $(PREFIX2).rlx.bin \
 		    $(PREFIX1).autolex.bin $(PREFIX2).autolex.bin \
 		    $(BASENAME).$(PREFIX1).t1x $(BASENAME).$(PREFIX2).t1x \
