add missing bidix proper names

--- a/.gitattributes
+++ b/.gitattributes
@@ -23,6 +23,7 @@
 dev/bidix-missing-adj.dix -text
 dev/bidix-missing-adv.dix -text
 dev/bidix-missing-n.dix -text
+dev/bidix-missing-np.dix -text
 dev/bidix-missing-verbs.dix -text
 /modes.xml -text
 texts/ataturk-tr.txt -text
