come fixes to get it to compile?

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,8 @@
 /apertium-tur-uzb.tur-uzb.lrx -text
 /apertium-tur-uzb.tur-uzb.rlx -text
 /apertium-tur-uzb.tur-uzb.t1x -text
+/apertium-tur-uzb.tur-uzb.t2x -text
+/apertium-tur-uzb.tur-uzb.t3x -text
 /apertium-tur-uzb.tur.lexc -text
 /apertium-tur-uzb.tur.twol -text
 /apertium-tur-uzb.uzb-tur.lrx -text
