--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,7 @@
 /apertium-tur-uzb.uzb-tur.rlx -text
 /apertium-tur-uzb.uzb-tur.t1x -text
 /apertium-tur-uzb.uzb-tur.t2x -text
+/apertium-tur-uzb.uzb-tur.t3x -text
 /apertium-tur-uzb.uzb.lexc -text
 /apertium-tur-uzb.uzb.twol -text
 /autogen.sh -text
