--- a/Makefile.am
+++ b/Makefile.am
@@ -10,9 +10,7 @@ PREFIX2=$(LANG2)-$(LANG1)
 
 BASENAME=apertium-$(PREFIX1)
 
-TARGETS_COMMON =		\
-	$(PREFIX1).automorf.bin	\
-	#$(PREFIX1).prob		\
+TARGETS_COMMON = $(PREFIX1).automorf.bin	\
 	$(PREFIX1).rlx.bin	\
 	$(PREFIX1).autobil.bin	\
 	$(PREFIX1).autolex.bin	\
@@ -22,7 +20,6 @@ TARGETS_COMMON =		\
 	$(PREFIX1).t2x.bin	\
 	$(PREFIX1).t3x.bin	\
 	$(PREFIX2).automorf.bin	\
-	#$(PREFIX2).prob		\
 	$(PREFIX2).rlx.bin	\
 	$(PREFIX2).autobil.bin	\
 	$(PREFIX2).autolex.bin	\
@@ -32,6 +29,8 @@ TARGETS_COMMON =		\
 	$(PREFIX2).t2x.bin	\
 	$(PREFIX2).t3x.bin
 
+#$(PREFIX1).prob		
+#$(PREFIX2).prob		
 
 # This include defines goals for install-modes, .deps/.d, autobil.prefixes and .mode files:
 @ap_include@
