--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,7 @@ TARGETS_COMMON =		\
 	$(PREFIX1).t1x.bin	\
 	$(PREFIX1).t2x.bin	\
 	$(PREFIX1).t3x.bin	\
+	$(PREFIX1).rtx.bin	\
 	$(PREFIX2).automorf.bin	\
 	$(PREFIX2).prob		\
 	$(PREFIX2).rlx.bin	\
@@ -29,7 +30,8 @@ TARGETS_COMMON =		\
 	$(PREFIX2).autogen.bin	\
 	$(PREFIX2).t1x.bin	\
 	$(PREFIX2).t2x.bin	\
-	$(PREFIX2).t3x.bin
+	$(PREFIX2).t3x.bin \
+	$(PREFIX2).rtx.bin 
 
 
 # This include defines goals for install-modes, .deps/.d, autobil.prefixes and .mode files:
@@ -183,6 +185,16 @@ $(PREFIX2).t2x.bin: $(BASENAME).$(PREFIX2).t2x
 $(PREFIX2).t3x.bin: $(BASENAME).$(PREFIX2).t3x
 	apertium-validate-postchunk $<
 	apertium-preprocess-transfer $< $@
+
+###############################################################################
+## Recursive transfer rules
+###############################################################################
+
+$(PREFIX1).rtx.bin: $(BASENAME).$(PREFIX1).rtx
+	rtx-comp $< $@ 
+
+$(PREFIX2).rtx.bin: $(BASENAME).$(PREFIX2).rtx
+	rtx-comp $< $@
 
 ###############################################################################
 ## Postgeneration dictionaries
