--- a/Makefile.am
+++ b/Makefile.am
@@ -18,19 +18,16 @@ TARGETS_COMMON =		\
 	$(PREFIX1).autoseq.bin	\
 	$(PREFIX1).autolex.bin	\
 	$(PREFIX1).autogen.bin	\
-	$(PREFIX1).t1x.bin	\
-	$(PREFIX1).t2x.bin	\
-	$(PREFIX1).t3x.bin	\
+	$(PREFIX1).rtx.bin	\
 	$(PREFIX2).automorf.bin	\
 	$(PREFIX2).prob		\
 	$(PREFIX2).rlx.bin	\
 	$(PREFIX2).autobil.bin	\
 	$(PREFIX2).autolex.bin	\
 	$(PREFIX2).autogen.bin	\
-	$(PREFIX2).t1x.bin	\
-	$(PREFIX2).t2x.bin	\
-	$(PREFIX2).t3x.bin
-
+	$(PREFIX1).t1x.bin	\
+	$(PREFIX1).t2x.bin	\
+	$(PREFIX1).t3x.bin
 
 # This include defines goals for install-modes, .deps/.d, autobil.prefixes and .mode files:
 @ap_include@
@@ -159,19 +156,6 @@ $(PREFIX2).autolex.bin: $(BASENAME).$(PREFIX2).lrx
 ## Structural transfer rules
 ###############################################################################
 
-$(PREFIX1).t1x.bin: $(BASENAME).$(PREFIX1).t1x
-	apertium-validate-transfer $<
-	apertium-preprocess-transfer $< $@
-
-$(PREFIX1).t2x.bin: $(BASENAME).$(PREFIX1).t2x
-	apertium-validate-interchunk $<
-	apertium-preprocess-transfer $< $@
-
-$(PREFIX1).t3x.bin: $(BASENAME).$(PREFIX1).t3x
-	apertium-validate-postchunk $<
-	apertium-preprocess-transfer $< $@
-
-
 $(PREFIX2).t1x.bin: $(BASENAME).$(PREFIX2).t1x
 	apertium-validate-transfer $<
 	apertium-preprocess-transfer $< $@
@@ -183,6 +167,9 @@ $(PREFIX2).t2x.bin: $(BASENAME).$(PREFIX2).t2x
 $(PREFIX2).t3x.bin: $(BASENAME).$(PREFIX2).t3x
 	apertium-validate-postchunk $<
 	apertium-preprocess-transfer $< $@
+
+$(PREFIX1).rtx.bin: $(BASENAME).$(PREFIX1).rtx
+	rtx-comp $< $@
 
 ###############################################################################
 ## Postgeneration dictionaries
@@ -202,12 +189,10 @@ EXTRA_DIST=					\
 		$(BASENAME).$(PREFIX1).lrx	\
 		$(BASENAME).$(PREFIX1).dix	\
 		$(BASENAME).$(PREFIX2).lrx	\
-		$(BASENAME).$(PREFIX1).t1x	\
-		$(BASENAME).$(PREFIX1).t2x	\
-		$(BASENAME).$(PREFIX1).t3x	\
 		$(BASENAME).$(PREFIX2).t1x	\
 		$(BASENAME).$(PREFIX2).t2x	\
 		$(BASENAME).$(PREFIX2).t3x	\
+		$(BASENAME).$(PREFIX1).rtx
 		modes.xml
 
 ###############################################################################
