Added prc to .rtx

--- a/configure.ac
+++ b/configure.ac
@@ -34,6 +34,11 @@ AS_IF([test x$LRXCOMP = xfalse], [AC_MSG_ERROR([You don't have lsx-comp installe
 AC_PATH_PROG([LRXPROC], [lsx-proc], [false], [$PATH$PATH_SEPARATOR$with_lsx_proc/bin])
 AS_IF([test x$LRXPROC = xfalse], [AC_MSG_ERROR([You don't have lsx-proc installed])])
 
+AC_PATH_PROG([RTXCOMP], [rtx-comp], [false], [$PATH$PATH_SEPARATOR$with_rtx_comp/bin])
+AS_IF([test x$RTXCOMP = xfalse], [AC_MSG_ERROR([You don't have rtx-comp installed])])
+
+AC_PATH_PROG([RTXPROC], [rtx-proc], [false], [$PATH$PATH_SEPARATOR$with_rtx_proc/bin])
+AS_IF([test x$RTXPROC = xfalse], [AC_MSG_ERROR([You don't have rtx-proc installed])])
 
 AC_PATH_PROGS(ZCAT, [gzcat zcat], [false])
 AS_IF([test x$ZCAT = xfalse], [AC_MSG_ERROR([You don't have zcat nor gzcat installed])])
@@ -46,4 +51,3 @@ AP_CHECK_LING([2], [apertium-uzb])
 AP_MKINCLUDE
 
 AC_OUTPUT([Makefile])
-
