--- a/Makefile.am
+++ b/Makefile.am
@@ -231,11 +231,4 @@ clean-local:
 ###############################################################################
 
 test: all
-	echo "house" | apertium -d . tur-uzb | tee .test-mt
-	@echo "house" > .test-ref
-	@diff .test-ref .test-mt
-	echo "house" | apertium -d . uzb-tur | tee .test-mt
-	@echo "house" > .test-ref
-	@diff .test-ref .test-mt
-	@rm .test-ref .test-mt
-
+	apertium-regtest test
